ecmascript/parser/tests/test262-error-references/fail/e777c6584c047ff6.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/e777c6584c047ff6.js:2:13
  |
2 |     function(x = yield 3) {}
  |             ^

